# trimet_trip_game

./: .gitignore  README.md  claude_tips.html  create_game_in_notebook.ipynb  create_planner_shapes.ipynb  create_planner_shapes_trimet_boundary.ipynb  create_planner_shapes_within_portland.ipynb  create_route_line_buffer.ipynb  debug_mimick_game_in_notebook.ipynb  decodePolyine.js  driving_route.json  get_trimet_data.ipynb  getnearbyroutes.js  gettrimettripplan.js  index.html  itineraries_reduced_with_long_name.geojson  itinerary_routes_long_name.geojson  leaflet_test.html  manual_reset_in_notebook.ipynb  origin_destination_centriod.geojson  origin_destination_points.geojson  put_itinerary_parts_in_s3.ipynb  pyproject.toml  random_block_group_button.html  requirements.txt  routes.txt  tm_route_buffer_blockgroup.geojson  tm_route_buffer_bounds.geojson  trimet_block_groups_combos_tracking.parquet  trimet_plan_game_helper_scripts.py  trimet_plan_game_reset.py  trimet_plan_game_reset_local.py  trimet_trip_game.html  trimet_trip_game_pyodide.html  trimet_trip_game_reset.html  trip-game.yml  trip_planner_query_time.json  update_html_in_s3.ipynb  update_to_census_blocks.ipynb
.github/workflows/: game_reset.yml
exploration_notebooks/: create_game_in_notebook.ipynb  get_gtfs_shapes.ipynb  get_trimet_data.ipynb  test_planner_request.ipynb
